# yufmath

./: .gitignore  ARCHITECTURE.md  Cargo.toml  ENHANCED_SIMPLIFY_DEMO.md  LICENSE  README.md  TERMINAL_IMPROVEMENTS.md  simple_test.rs  test_batch.txt  test_fix.rs  test_fixes.txt  test_notebook.ynb  test_precision_issue.rs  test_simple.rs  yufmath_history.txt
.github/workflows/: build.yml
benches/: benchmarks.rs
docs/: api_guide.md  notebook_gui_implementation.md  notebook_gui_usage.md  terminal_features.md
examples/: advanced_api_demo.rs  advanced_features_demo.rs  api_demo.rs  enhanced_trigonometric_demo.rs  error_handling_demo.rs  function_demo.rs  interactive_test.rs  memory_optimization_demo.rs  notebook_gui_demo.rs  performance_demo.rs  precision_fix_demo.rs  quick_terminal_demo.rs  simple_gui_test.rs  symbol_rendering_demo.rs  terminal_color_test.rs  terminal_demo.rs  test_enhanced.rs
src/: lib.rs  main.rs
src/api/: async_compute.rs  config.rs  error.rs  mod.rs  progress.rs  yufmath.rs
src/cli/: args.rs  commands.rs  interactive.rs  mod.rs  progress.rs  terminal.rs
src/core/: arithmetic_tests.rs  constants.rs  constants_tests.rs  expression.rs  expression_builder.rs  expression_tests.rs  function_tests.rs  high_precision.rs  memory.rs  mod.rs  number.rs  number_tests.rs  operators.rs  precision_test.rs  types.rs
src/engine/: algebra.rs  cache.rs  cached_compute.rs  calculus.rs  calculus_tests.rs  compute.rs  enhanced_compute.rs  enhanced_simplify.rs  enhanced_simplify_tests.rs  error.rs  lazy.rs  matrix.rs  matrix_tests.rs  mod.rs  number_theory.rs  number_theory_tests.rs  parallel.rs  polynomial.rs  polynomial_tests.rs  runtime_enhanced_engine.rs  runtime_enhancement.rs  simplify.rs  simplify_tests.rs
src/ffi/: c_api.rs  mod.rs  types.rs
src/formatter/: latex.rs  mathml.rs  mod.rs  standard.rs  terminal.rs
src/notebook/: autocomplete.rs  cell.rs  execution.rs  export.rs  format.rs  gui.rs  gui_tests.rs  mod.rs  notebook.rs  scope.rs  tests.rs  ui.rs
src/parser/: error.rs  lexer.rs  lexer_tests.rs  mod.rs  syntax.rs  syntax_tests.rs
tests/: advanced_calculus_tests.rs  advanced_features_tests.rs  api_tests.rs  cache_tests.rs  cli_enhanced_tests.rs  cli_integration_tests.rs  differentiation_tests.rs  enhanced_simplify_tests.rs  error_handling_tests.rs  formatter_tests.rs  function_evaluation_tests.rs  integration_tests.rs  interactive_tests.rs  latex_formatting_tests.rs  lazy_parallel_tests.rs  memory_management_tests.rs  notebook_format_tests.rs  polynomial_integration_tests.rs  sqrt_precision_test.rs  symbol_rendering_tests.rs  terminal_formatting_tests.rs
