[package]
name = "yufmath"
version = "0.1.0"
edition = "2021"
description = "一个基于 Rust 的高性能计算机代数系统（CAS）库"
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-username/yufmath"
keywords = ["math", "algebra", "cas", "symbolic", "computation"]
categories = ["mathematics", "science"]

[dependencies]
# 数值计算依赖
num-bigint = "0.4"
num-rational = "0.4"
num-complex = "0.4"
num-traits = "0.2"
num-integer = "0.1"
bigdecimal = "0.4"

# 错误处理
thiserror = "1.0"

# 命令行工具
clap = { version = "4.0", features = ["derive"] }

# 交互式输入支持
rustyline = "13.0"

# 进度条支持
indicatif = "0.17"

[dev-dependencies]
# 性能基准测试
criterion = { version = "0.5", features = ["html_reports"] }
# 临时文件支持（用于测试）
tempfile = "3.0"

[[bench]]
name = "benchmarks"
harness = false

[[bin]]
name = "yufmath"
path = "src/main.rs"
