[package]
name = "yufmath"
version = "0.1.0"
edition = "2021"
description = "一个基于 Rust 的高性能计算机代数系统（CAS）库"
license = "MIT"
repository = "https://github.com/your-username/yufmath"
keywords = ["math", "algebra", "cas", "symbolic", "computation"]
categories = ["mathematics", "science"]

[profile.release]
strip = true

[dependencies]
# 数值计算依赖
num-bigint = { version = "0.4", features = ["serde"] }
num-rational = { version = "0.4", features = ["serde"] }
num-complex = "0.4"
num-traits = "0.2"
num-integer = "0.1"
bigdecimal = { version = "0.4", features = ["serde"] }

# 错误处理
thiserror = "1.0"

# 命令行工具
clap = { version = "4.0", features = ["derive"] }

# 交互式输入支持
rustyline = "13.0"

# 终端颜色支持
ansi_term = "0.12"

# 终端检测支持
atty = "0.2"

# 进度条支持
indicatif = "0.17"

# 并行计算支持
rayon = "1.8"

# 序列化支持
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# UUID 支持
uuid = { version = "1.0", features = ["v4", "serde"] }

# GUI 支持
fltk = { version = "1.4", features = ["fltk-bundled"] }

[dev-dependencies]
# 性能基准测试
criterion = { version = "0.5", features = ["html_reports"] }
# 临时文件支持（用于测试）
tempfile = "3.0"

[[bench]]
name = "benchmarks"
harness = false

[[bin]]
name = "yufmath"
path = "src/main.rs"

[[example]]
name = "api_demo"
path = "examples/api_demo.rs"

[[example]]
name = "advanced_api_demo"
path = "examples/advanced_api_demo.rs"

[[example]]
name = "performance_demo"
path = "examples/performance_demo.rs"

[[example]]
name = "advanced_features_demo"
path = "examples/advanced_features_demo.rs"

[[example]]
name = "terminal_demo"
path = "examples/terminal_demo.rs"

[[example]]
name = "quick_terminal_demo"
path = "examples/quick_terminal_demo.rs"

[[example]]
name = "terminal_color_test"
path = "examples/terminal_color_test.rs"

[[example]]
name = "notebook_gui_demo"
path = "examples/notebook_gui_demo.rs"

[[example]]
name = "simple_gui_test"
path = "examples/simple_gui_test.rs"
